--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -21,9 +21,14 @@
   <ItemGroup>
     <ClCompile Include="src\camera\camera.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\model\model.cpp" />
+    <ClCompile Include="src\utils\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera\camera.h" />
+    <ClInclude Include="src\model\model.h" />
+    <ClInclude Include="src\utils\utils.h" />
+    <ClInclude Include="src\utils\window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
@@ -142,14 +147,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\gaowanlu\Desktop\MyProject\3dll\include;C:\Users\gaowanlu\Desktop\MyProject\3dll\include\eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\include;$(ProjectDir)\include\eigen;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>NotSet</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\gaowanlu\Desktop\MyProject\3dll\lib\x64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\lib\x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
